overflow + large screen styling fix

--- a/scss/datatable.scss
+++ b/scss/datatable.scss
@@ -8,8 +8,9 @@ $datatable-font-size: 18px;
 $datatable-min-rows: 5;
 
 .dataTables_wrapper {
+    max-width: 100%;
     height: 100%;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     overflow: auto;
 
@@ -41,6 +42,7 @@ $datatable-min-rows: 5;
     opacity: 0;
     position: fixed;
     font-family: sans-serif;
+    margin: 0 !important;
 
     thead tr {
         height: $datatable-headline-length;
